<resources>
    <string name="app_name">RateXchange</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mid_market_exchange_rate_at_13_38"><u>Mid-market exchange rate at 13:38</u></string>
    <string name="convert">Convert</string>
    <string name="convert_button">Convert Button</string>
    <string name="sign_up">Sign up</string>
    <string name="currency_calculator">Currency Calculator<font fgcolor="@color/new_green">.</font></string>
    <string name="aud">AUD</string>
    <string name="rate">Rate</string>
    <string name="switch_toggle">switch toggle</string>
    <string name="enter_amount">Enter Amount</string>


    <string-array name="currencies">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>